// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[TodoModel] clear 1`] = `Object {}`;

exports[`[TodoModel] init 1`] = `
Object {
  "completed": false,
  "order": 1,
  "title": "dummy",
}
`;

exports[`[TodoModel] title save 1`] = `
Object {
  "completed": false,
  "order": 1,
  "title": "save-dummy",
}
`;

exports[`[TodoModel] title set 1`] = `
Object {
  "completed": false,
  "order": 1,
  "title": "set-dummy",
}
`;
